@@ -150,6 +150,9 @@
 /* Define if you have the sigsetmask function.  */
 #undef HAVE_SIGSETMASK
 
+/* Define if you have the snprintf function.  */
+#undef HAVE_SNPRINTF
+
 /* Define if you have the stpcpy function.  */
 #undef HAVE_STPCPY
 
@@ -215,6 +218,9 @@
 
 /* Define if you have the vprintf function.  */
 #undef HAVE_VPRINTF
+
+/* Define if you have the vsnprintf function.  */
+#undef HAVE_VSNPRINTF
 
 /* Define if you have the vsprintf function.  */
 #undef HAVE_VSPRINTF
